dev/manifests/3rd-party/camunda/camunda-extra-svc.yml
---
# Source: xxxxx/templates/camunda-extra-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: camunda
  labels:
    app: camunda
  annotations:
    pia-team.com/role: pia.k8s.camunda/0.7.0
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/name: camunda-bpm-platform
  type: ClusterIP
