dev/manifests/3rd-party/camunda/service.yaml
---
# Source: camunda-bpm-platform/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: camunda-camunda-bpm-platform
  labels:
    helm.sh/chart: camunda-bpm-platform-7.6.4
    app.kubernetes.io/name: camunda-bpm-platform
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/version: "7.x.x"
    app.kubernetes.io/managed-by: Helm
  annotations:
    pia-team.com/app: camunda
    pia-team.com/app-logo: camunda
    pia-team.com/app-title: Camunda
    pia-team.com/role: pia.k8s.camunda/0.7.0
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    targetPort: http
    port: 80


  selector:
    app.kubernetes.io/name: camunda-bpm-platform
    app.kubernetes.io/instance: camunda
