dev/manifests/3rd-party/camunda/camunda-network-policy.yml
---
# Source: xxxxx/templates/camunda-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: camunda-ingress
  annotations:
    pia-team.com/role: pia.k8s.camunda/0.7.0
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: camunda
  policyTypes:
  - Ingress
---
# Source: xxxxx/templates/camunda-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: camunda-egress
  annotations:
    pia-team.com/role: pia.k8s.camunda/0.7.0
spec:
  egress:
  - to:
    - ipBlock:
        cidr: 10.244.0.0/16
    ports:
    - port: 53
      protocol: UDP
    - port: 5432
      protocol: TCP
    - port: 9092
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: camunda
  policyTypes:
  - Egress
